--- a/renewable_energy_ai.ipynb
+++ b/renewable_energy_ai.ipynb
@@ -14,7 +14,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Install Kaggle API (uncomment if not installed)\n",
+        "# Install Kaggle API \n",
         "# !pip install kaggle\n",
         "\n",
         "# Import required libraries\n",
